Update dependencies and improve code compatibility with PySide6

--- a/resources/languages/EN.ini
+++ b/resources/languages/EN.ini
@@ -65,7 +65,7 @@ FORMLAYOUT_NICKNAME_TITLE = Nickname
 FORMLAYOUT_SAVE_FOLDER_FILE_TITLE = Save File Folder
 FORMLAYOUT_ENABLE_ENCRYPTION_TITLE = Enable Encryption
 FORMLAYOUT_ENCRYPTION_KEY_TITLE = Encryption Key
-MSG_SERIAL_INT_STARTED = Serial Interface %s has started
+MSG_SERIAL_INT_STARTED = Serial Interface {0} has started
 ERROR_NO_DIR_MESSAGE = This Save Files Directory doesn't exist !!!
 ERROR_NO_DIR_TITLE = PathFile Error
 ERROR_NO_INT_MESSAGE = The value must be Integer !!!
